--- a/simulation/ttsnap_single.ipynb
+++ b/simulation/ttsnap_single.ipynb
@@ -27,26 +27,74 @@
    "execution_count": null,
    "id": "009c63b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded reward scores with shape: (200, 200, 20) and (200, 200, 20)\n"
+     ]
+    }
+   ],
    "source": [
     "'---- Load the computed reward scores of each prompt, each image and each timestep ---'\n",
-    "# num_prompt = 200 \n",
+    "value_folder = 'values'\n",
+    "diffusion_model = 'flux' # flux or sdxl\n",
+    "reward_model = 'imr' # imr or pic or hps\n",
+    "num_prompt = 200 # number of prompts to use\n",
     "num_image = 200 # number of images per prompt\n",
     "num_steps = 20 # number of diffusion inference timesteps\n",
-    "steps = np.arange(num_steps)\n",
     "\n",
     "reward_base_all = []  # shape (num_prompt, num_image, num_steps)\n",
+    "rewards_naft_all = [] # shape (num_prompt, num_image, num_steps)\n",
     "\n",
+    "location_base = f'{value_folder}/{diffusion_model}_{reward_model}_val_base'\n",
+    "for s in np.arange(num_steps):\n",
+    "    file_name = f'p{num_prompt}_i{num_image}_s{s:02d}.yaml'\n",
+    "    r_dict = yaml.safe_load(open(f'{location_base}/{file_name}')) \n",
+    "    reward_one_step = np.stack([r_dict[k] for k in sorted(r_dict.keys())], axis=0) # shape (num_prompt, num_image)\n",
+    "    reward_base_all.append(reward_one_step)\n",
+    "reward_base_all = np.stack(reward_base_all, axis=-1) # shape (num_prompt, num_image, num_steps)\n",
+    "print(f'Loaded base reward scores with shape: {reward_base_all.shape}')\n",
     "\n",
-    "for s in steps:\n",
-    "    if s > 14:\n",
-    "        # r_dict = yaml.safe_load(open(f'{value_folder_base}/{name}_flux_val_base_s{s:02d}_i{n_max}.yaml'))\n",
-    "        r_dict = yaml.safe_load(open(f'{value_folder_base}/{name}_flux_val_base_i{n_max}_s{s:02d}.yaml'))\n",
+    "location_naft = f'{value_folder}/{diffusion_model}_{reward_model}_val_naft'\n",
+    "for s in np.arange(num_steps):\n",
+    "    file_name = f'p{num_prompt}_i{num_image}_s{s:02d}.yaml'\n",
+    "    if not os.path.exists(f'{location_naft}/{file_name}'):\n",
+    "        # some steps are not used for naft and we use base values instead, e.g. steps too high or too low\n",
+    "        r_dict = yaml.safe_load(open(f'{location_base}/{file_name}')) \n",
     "    else:\n",
-    "        # r_dict = yaml.safe_load(open(f'{value_folder_base}/{name}_flux_val_train_s{s:02d}_i{n_max}.yaml'))\n",
-    "        r_dict = yaml.safe_load(open(f'{value_folder_trained}/{name}_flux_val_train_i{n_max}_s{s:02d}.yaml'))\n",
-    "    rewards_enhanced_all.append(r_dict)"
+    "        r_dict = yaml.safe_load(open(f'{location_naft}/{file_name}')) \n",
+    "    reward_one_step = np.stack([r_dict[k] for k in sorted(r_dict.keys())], axis=0) # shape (num_prompt, num_image)\n",
+    "    rewards_naft_all.append(reward_one_step)\n",
+    "rewards_naft_all = np.stack(rewards_naft_all, axis=-1) # shape (num_prompt, num_image, num_steps)\n",
+    "\n",
+    "print(f'Loaded naft reward scores with shape: {rewards_naft_all.shape}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cbb5908",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "'Compare TTSnap, TTSp and Best-of-N'\n",
+    "from ttsnap_sim import *\n",
+    "\n",
+    "denoise_budget = 9.9 # TFlops\n",
+    "verifier_budget = 1.2 # TFlops\n",
+    "\n",
+    "S = Simulation(x=denoise_budget, y=verifier_budget, max_step=num_steps)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa3c4276",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
